# MultiplayerLab

./: .gitignore  LICENSE  README.md
2M3/: CMakeLists.txt
2M3/Include/: Application.h  Car.h  CarLogic.h  Category.h  Client.h  ClientData.h  Collider.h  Command.h  CommandQueue.h  Container.h  Entity.h  GameClient.h  GameServer.h  GameState.h  GlobalSettingsState.h  KeyBinding.h  Label.h  MainState.h  MenuState.h  MessageTypes.h  MultiplayerGameState.h  NetworkCommon.h  OldEntity.h  Particles.h  PickUp.h  Player.h  PlayerGUI.h  Profiling.h  Projectile.h  ProjectileLogic.h  Renderable.h  ResourceHolder.h  ResourceIdentifiers.h  SceneNode.h  ServerWorld.h  Settings.h  SettingsState.h  State.h  StateIdentifiers.h  StateStack.h  (+7 more)
2M3/Include/Application/: Application.h  Settings.h
2M3/Include/Application/States/: GlobalSettingsState.h  MainState.h
2M3/Include/Client/: Client.h  ClientNetworkHandler.h  ClientNetworkThread.h
2M3/Include/Client/Managers/: ClientGameManager.h
2M3/Include/Client/Modules/: ClientNetworkModule.h
2M3/Include/Client/States/: ClientGameState.h  GameState.h  MenuState.h  SettingsState.h  TitleState.h
2M3/Include/Client/Systems/: NetworkAddEntities.h  NetworkPingPong.h  NetworkSendInputs.h  NetworkSetColor.h  NetworkSetSpeed.h  NetworkSetTransform.h  NetworkWorldState.h
2M3/Include/Common/: Constants.h  EchoPacket.h  Entity.h  Network.h  PingPongPackets.h
2M3/Include/Common/Components/: Bullet.h  Camera.h  CameraTarget.h  CarEngine.h  CarInput.h  Collider.h  Component.h  CopiableFromPrefab.h  GUI.h  Gun.h  Health.h  HealthBar.h  Kinematics.h  Particles.h  PlayableCarInput.h  PlayableVehicleInput.h  Projectile.h  RectShape.h  Sprite.h  Trajectory.h  Transform.h  VehicleEngine.h  VehicleInput.h
2M3/Include/Common/GUI/: Button.h  Container.h  Label.h
2M3/Include/Common/Managers/: GameManager.h  ResourceManager.h  Signature.h
2M3/Include/Common/Modules/: INetworkModule.h  Module.h
2M3/Include/Common/Network/: AddEntityPacket.h  Buffer.h  Buffer.inl  Constants.h  EchoPacket.h  InputPacket.h  Network.h  NetworkHandler.h  NetworkHandler.inl  PingPongPackets.h  SetColorPacket.h  SetSpeedPacket.h  SetTransformPacket.h  TemplatePacket.h  WorldStatePacket.h
2M3/Include/Common/Prefabs/: Prefabs.h  RenderablePrefabs.h
2M3/Include/Common/Resources/: ResourceIdentifiers.h
2M3/Include/Common/States/: State.h  StateStack.h
2M3/Include/Common/Systems/: BulletSystem.h  CameraSystem.h  CarCollisionHandling.h  CarDeath.h  CarMovementSystem.h  CollisionSystem.h  GUIRender.h  GUISystem.h  GridRenderer.h  GunSystem.h  HealthBarRenderer.h  KeyboardInputSystem.h  MovementSystem.h  NetworkAddEntities.h  NetworkPingPong.h  NetworkWorldState.h  ParticleRenderer.h  ParticleSystem.h  RectShapeRenderer.h  RenderHealthBar.h  RenderParticleSystem.h  RenderSystem.h  RenderTrajectorySystem.h  SpriteRenderer.h  (+6 more)
2M3/Include/Server/: DelayCreation.h  IServerEventsListener.h  Interface.h  NetworkSettings.h  NetworkTypes.h  Server.h  ServerClock.h  ServerMain.h  ServerNetworkHandler.h  ServerNetworkHandling.h  ServerNetworkThread.h  servermain.h
2M3/Source/: Application.cpp  Button.cpp  Car.cpp  CarLogic.cpp  Client.cpp  ClientData.cpp  Collider.cpp  Command.cpp  CommandQueue.cpp  Component.cpp  Container.cpp  Entity.cpp  GameClient.cpp  GameServer.cpp  GameState.cpp  GlobalSettingsState.cpp  KeyBinding.cpp  Label.cpp  MainState.cpp  MenuState.cpp  MultiplayerGameState.cpp  NetworkCommon.cpp  OldEntity.cpp  Particles.cpp  PickUp.cpp  Player.cpp  PlayerGUI.cpp  Projectile.cpp  ProjectileLogic.cpp  SceneNode.cpp  ServerWorld.cpp  SettingsState.cpp  Source.cpp  State.cpp  StateStack.cpp  TitleState.cpp  Utility.cpp  Wall.cpp  WallLogic.cpp  World.cpp
2M3/Source/Application/: Application.cpp
2M3/Source/Client/: Client.cpp  ClientMain.cpp  ClientNetworkHandler.cpp  ClientNetworkHandling.cpp  ClientNetworkThread.cpp  ClientTestMain.cpp
2M3/Source/Common/: EchoPacket.cpp  Entity.cpp  PacketSerialization.cpp  PingPongPackets.cpp
2M3/Source/Server/: DelayCreation.cpp  Interface.cpp  Network.cpp  NetworkSettings.cpp  Server.cpp  ServerClock.cpp  ServerMain.cpp  ServerNetworkHandler.cpp  ServerNetworkHandling.cpp  ServerNetworkThread.cpp  servermain.cpp
2M3/Unused/Include/: Entity.h  GameClient.h  GameServer.h  NetworkCommon.h  OldParticles.h  PickUp.h  PlayerGUI.h  ProjectileLogic.h  ServerWorld.h  Wall.h  World.h
2M3/Unused/Source/: Car.cpp  CarLogic.cpp  Entity.cpp  GUIRender.cpp  GUISystem.cpp  GameServer.cpp  MultiplayerGameState.cpp  OldEntity.cpp  OldParticles.cpp  Player.cpp  PlayerGUI.cpp  Projectile.cpp  ProjectileLogic.cpp  ServerWorld.cpp  Wall.cpp  WallLogic.cpp  World.cpp
Experiments/ClientServerBoostStandAlone/: CMakeLists.txt
Experiments/ClientServerBoostStandAlone/Sources/: CMakeLists.txt  common.h  tcp_client.cpp  tcp_server.cpp  udp_client.cpp  udp_server.cpp
Experiments/ClientServerBoostStandAlone/sample/: CMakeLists.txt  TCP_client.cpp  TCP_server.cpp  blocking_tcp_echo_client.cpp  blocking_tcp_echo_server.cpp  blocking_udp_echo_client.cpp  blocking_udp_echo_server.cpp  common.h
Experiments/ClientServerEcho/Sources/: CMakeLists.txt  Measures.cpp  OptParserExtended.cpp  common.h  options.cpp  options.h  udp_client.cpp  udp_server.cpp
Experiments/ClientServerPerf/: CMakeLists.txt  CMakeLists_cereal.txt.in
Experiments/ClientServerPerf/Doc/: Makefile  protocolePerf.mscgen
Experiments/ClientServerPerf/Sources/: CMakeLists.txt  Measures.cpp  Measures.h  OptParserExtended.h  OptParser_ext.cpp  OptParser_ext.h  common.h  enet_client.cpp  enet_communication.cpp  enet_communication.h  enet_server.cpp  options_ext.cpp  options_ext.h  tcp_client.cpp  tcp_communication.cpp  tcp_communication.h  tcp_server.cpp  udp_client.cpp  udp_communication.cpp  udp_communication.h  udp_server.cpp
Experiments/ClientServerSFML/: CMakeLists.txt  README.txt
Experiments/ClientServerSFML/Sources/: Client.cpp  Client.h  common.h  tcp_clientMonoThread.cpp  tcp_clientMultiThread.cpp  tcp_server.cpp  udp_clientMonoThread.cpp  udp_clientMultiThread.cpp  udp_server.cpp
(+118 files in other folders)
